--- a/Frontend/QuanTec Overwatch Frontend/src/pages/Login.css
+++ b/Frontend/QuanTec Overwatch Frontend/src/pages/Login.css
@@ -2,19 +2,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono');
 @import url('https://fonts.googleapis.com/css2?family=Roboto');
 
-.disabled {
-  display: none;
-}
-
 .App {
   text-align: center;
-  height: 45%;
-  aspect-ratio: 1 / 1.25;
+  min-height: 450px;
+  width: 360px;
   border: 2px solid rgb(240,240,240);
   border-radius: 25px;
   color: rgb(240,240,240);
   font-family: 'Ubuntu Mono';
   font-weight: 700;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.disabled {
+  display: none;
 }
 
 .container {
@@ -24,6 +28,7 @@
   flex-flow: column;
   justify-content: center;
   align-items: center;
+  overflow: scroll;
 }
 
 #login {
@@ -31,7 +36,8 @@
   display: flex;
   flex-direction: column;
   text-align: left;
-  height: 60%;
+  height: 70%;
+  width: 100%;
 }
 
 #login > * {
@@ -41,14 +47,14 @@
 
 .loginfield {
   padding-left: 5%;
-  font-size: 1.15vw;
+  font-size: 20px;
 }
 
 #password, #username {
   background-color: rgb(55,55,55);
   border: 2px solid rgb(240,240,240);
   border-radius: 25px;
-  font-size: 1.15vw;
+  font-size: 16px;
   color: rgb(240,240,240);
   padding-left: 7.5%;
   margin-left: 2.5%;
@@ -67,7 +73,7 @@
   margin-right: 5%;
   transition: 0.15s;
   font-family: inherit;
-  font-size: 1.5vw;
+  font-size: 24px;
 }
 
 .submit:hover {
@@ -90,27 +96,34 @@
 }
 
 .discordOAuthLaunch {
-  background-color: rgb(70,72,238);
+  background-color: #5865F2;
   color: whitesmoke;
   border: 0;
-  border-radius: 10px;
+  border-radius: 25px;
   font-family: 'Roboto';
   font-weight: 700;
-  font-size: 1.25vw;
+  font-size: 20px;
   text-align: center;
   line-height: 100%;
   padding: 10px;
   margin-top: 5%;
-  width: 60%;
-  height: 7.5%;
+  margin-bottom: 5%;
+  width: 70%;
+  height: 10%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+  overflow: hidden;
 }
 
 .discordOAuthLaunch:hover {
-  background-color: rgb(54,58,183);
+  background-color: #4855E2;
 }
 
 .discordOAuthLaunch:active {
-  background-color: rgb(46,48,148);
+  background-color: #3845D2;
 }
 
 .loginReferralReason {
